# swf-fastmon-agent

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  manage.py  pyproject.toml  requirements.txt  setup_db.py
.github/workflows/: test-fastmon-utils.yml
doc/database/: schema.dbml
init-db/: 01-create-extensions.sql
src/swf-fastmon-client/: README.md  main.py
src/swf_fastmon_agent/: README.md  __init__.py  database.py  fastmon_utils.py  main.py  models.py
src/swf_fastmon_agent/agents/: __init__.py  fastmon_utils.py  file_monitor.py  main.py  supervisord.conf  supervisord_example.conf
src/swf_fastmon_agent/agents/tests/: test_fastmon_utils.py
src/swf_fastmon_agent/database/: README.md  __init__.py  apps.py  database.py  manage.py  models.py  settings.py
src/swf_fastmon_agent/database/migrations/: 0001_initial.py  0002_alter_stffile_status.py  0003_alter_messagequeuedispatch_is_successful.py
src/swf_fastmon_agent/database/tests/: __init__.py  test_database.py
src/swf_fastmon_agent/tests/: README.md   test_fastmon_utils.py
src/swf_fastmon_client/: README.md  __init__.py  main.py  models.py
